Attempting to fix header image on mobile
Backgound image: cover isn't working properly on mobile. Manually set
the width to 100% should be a fix for it.


Former-commit-id: 1293d36c56888ae8bd42d9b93188646d7c799898

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,7 +249,8 @@ header {
   top: 0px;
   height: 1000px;
   background: url(../img/headerBackground.jpg);
-  background-size: cover; } 
+  background-size: cover;  
+  min-width: 100%; } 
   header h1 {
     margin: 0;
     /*margin-left: 15%;*/
